# computer_graphics_course

./: .gitignore  CMakeLists.txt  ex.h  main.cpp
res/shaders/: e2.fs
src/: shader_wrapper.cpp  shader_wrapper.h
src/math/: exception.cpp  exception.hpp  mat2.cpp  mat2.hpp  mat3.cpp  mat3.hpp  mat4.cpp  mat4.hpp  utils.hpp  vec2.cpp  vec2.h  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
test/: mat_test.cpp  test.cpp  vec_test.cpp
